<resources>
    <string name="app_name">L04 Reservation</string>
    <string name="name">Name</string>
    <string name="phone_number">+65 </string>
    <string name="pax">Size of the group: </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="smoking">Smoking Area</string>
    <string name="nonSmoking">Non-smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>